--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "backend-cursos",
   "version": "1.0.0",
-  "description": "Backend RESTful para gest\u00e3o de cursos com Postgres e JWT",
+  "description": "Backend RESTful para gestão de cursos com Postgres e JWT",
   "main": "dist/index.js",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
     "test": "jest --runInBand --detectOpenHandles",
+  "test:ci": "cross-env NODE_ENV=test jest --runInBand --detectOpenHandles",
     "docker:build": "docker build -t backend-cursos .",
     "docker:up": "docker-compose up -d",
     "seed": "ts-node src/seeds/seed.ts"
@@ -25,12 +26,17 @@
     "typeorm": "^0.3.14"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
+    "@types/bcrypt": "^6.0.0",
+    "@types/cors": "^2.8.19",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^20.2.5",
+    "@types/supertest": "^6.0.3",
     "jest": "^29.6.1",
-    "supertest": "^6.4.4",
+    "sqlite3": "^5.1.7",
+    "supertest": "^6.3.4",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
